# Prpc

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  go.mod
.github/workflows/: ci.yml
codec/: codec.go  gob.go
docs/: error_handling_guide.md  optimization_guide.md
gee/: context.go  gee.go  go.mod  router.go
logger/: logger.go
sample/: user.pb.cc  user.pb.h  user.proto
sample/callee/: CMakeLists.txt  server.cc
sample/caller/: CMakeLists.txt  client.cc
src/: CMakeLists.txt  application.cc  application.hpp  channel.cc  conf.cc  conf.hpp  controller.cc  error.cc  header.pb.cc  header.proto  logger.hpp  provider.cc  provider.hpp  test_error_handling.cc  threadpool.cc  zookeeperutil.cc  zookeeperutil.hpp
src/codec/: codec.go  go.mod  gob.go  logger.go
src/include/: application.h  application.hpp  channel.h  channel.hpp  conf.h  conf.hpp  controller.h  controller.hpp  error.h  error.hpp  error_example.h  error_example.hpp  header.pb.h  logger.h  logger.hpp  message_pool.h  network_utils.h  network_utils.hpp  object_pool.h  pool_monitor.h  provider.h  provider.hpp  threadpool.h  threadpool.hpp  zookeeperutil.h  zookeeperutil.hpp
tests/: CMakeLists.txt  README.md  benchmark_test.cc  fuzz_test.cc  generate_test_report.py  performance_test.cc  run_tests.sh  test_application.cc  test_config.cc  test_coverage.sh  test_data_generator.h  test_error_handling.cc  test_integration.cc  test_logger.cc  test_network_utils.cc  test_object_pool.cc  test_provider.cc  test_threadpool.cc  test_zookeeper.cc
